# bulkfolder

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  bulkfolder_installer.iss  installer_script.iss  project_info.xml  pyproject.toml  requirements.txt  run_app.py  run_app.sh  sidebar.py  sonar-project.properties  version_info.txt
.github/workflows/: release.yml
src/: README.md  docker-compose.yml  pyproject.toml
src/bulkfolder/: build.bat  chunker.py  cli.py  config.py  domain.py  duplicates.py  executor.py  info.py  journal.py  pdf_converter.py  planner.py  presets.py  rules.py  scanner.py  undo.py
src/bulkfolder/ui/: actions.py  app.py  main.py  state.py  theme.py  theme.templates
src/bulkfolder/ui/views/: about_page.py  cards.py  chunker_page.py  dashboard.py  dateorg_page.py  duplicates.py  empty_folders_page.py  flattener_page.py  large_files_page.py  logs.py  organizer_panel.py  pdf_page.py  presets_page.py  preview.py  renamer_page.py  settings_page.py  sidebar.py  state.py  topbar.py  unzipper_page.py
src/themes/: dracula.json
