[project]
name = "bulkfolder"
version = "1.4.0"
description = "Bulk folder organizer and renamer (desktop + CLI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="BulkFolder Contributors"}]
dependencies = [
  "customtkinter>=5.2.0",
  "matplotlib>=3.8.0",
]

[project.scripts]
bulkfolder = "bulkfolder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]